--- a/flightservices/flightservices/docker-compose.yml
+++ b/flightservices/flightservices/docker-compose.yml
@@ -24,6 +24,40 @@ services:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/reservation
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: root
+    volumes:
+      - ./logs:/app/logs   # ← mount logs folder to host
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.19.2
+    container_name: elasticsearch
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - ES_JAVA_OPTS=-Xms512m -Xmx512m
+    ports:
+      - "9200:9200"
+    volumes:
+      - es_data:/usr/share/elasticsearch/data
+
+  logstash:
+    image: docker.elastic.co/logstash/logstash:8.19.2
+    container_name: logstash
+    depends_on:
+      - elasticsearch
+    volumes:
+      - ./logs:/usr/share/logstash/pipeline/logs
+      - ./logstash/pipeline:/usr/share/logstash/pipeline
+    ports:
+      - "5044:5044"
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.19.2
+    container_name: kibana
+    depends_on:
+      - elasticsearch
+    ports:
+      - "5601:5601"
 
 volumes:
   mysql_data:
+  es_data:
