Helm Charts added

--- a/flightservices/flightservices/k8s/flightservice-service.yml
+++ b/flightservices/flightservices/k8s/flightservice-service.yml
@@ -3,11 +3,10 @@ kind: Service
 metadata:
   name: flightservice
 spec:
-  type: NodePort        # Exposes the service outside the cluster via a port on the node
+  type: NodePort
   selector:
-    app: flightservice  # must match the labels in your Deployment
+    app: flightservice
   ports:
-    - protocol: TCP
-      port: 9090       # internal cluster port
-      targetPort: 9090 # port your container listens on
-      nodePort: 30090  # external port you can use on minikube
+    - port: 9090
+      targetPort: 9090
+      nodePort: 30090
